Colaboratory を使用して作成しました

--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO+gKrdzY+Ia3jb+Jw/LV0G",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPCtSi4hl/z7vDWR/lvfIA/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,51 +64,6 @@
       },
       "source": [
         "# ITP1 Introduction to Programming I プログラミング入門\n",
-        "\n",
-        "ITP1_1_A: Hello World  \n",
-        "ITP1_1_B: X Cubic  \n",
-        "ITP1_1_C: Rectangle  \n",
-        "ITP1_1_D: Watch  \n",
-        "ITP1_2_A: Small, Large, or Equal  \n",
-        "ITP1_2_B: Range  \n",
-        "ITP1_2_C: Sorting Three Numbers  \n",
-        "ITP1_2_D: Circle in a Rectangle  \n",
-        "ITP1_3_A: Print Many Hello World  \n",
-        "ITP1_3_B: Print Test Cases  \n",
-        "ITP1_3_C: Swapping Two Numbers  \n",
-        "ITP1_3_D: How Many Divisors?  \n",
-        "ITP1_4_A: A / B Problem  \n",
-        "ITP1_4_B: Circle  \n",
-        "ITP1_4_C: Simple Calculator  \n",
-        "ITP1_4_D: Min, Max and Sum  \n",
-        "ITP1_5_A: Print a Rectangle  \n",
-        "ITP1_5_B: Print a Frame  \n",
-        "ITP1_5_C: Print a Chessboard  \n",
-        "ITP1_5_D: Structured Programming  \n",
-        "ITP1_6_A: Reversing Numbers  \n",
-        "ITP1_6_B: Finding Missing Cards  \n",
-        "ITP1_6_C: Official House  \n",
-        "ITP1_6_D: Matrix Vector Multiplication  \n",
-        "ITP1_7_A: Grading  \n",
-        "ITP1_7_B: How many ways?  \n",
-        "ITP1_7_C: Spreadsheet  \n",
-        "ITP1_7_D: Matrix Multiplication  \n",
-        "ITP1_8_A: Toggling Cases  \n",
-        "ITP1_8_B: Sum of Numbers  \n",
-        "ITP1_8_C: Counting Characters  \n",
-        "ITP1_8_D: Ring  \n",
-        "ITP1_9_A: Finding a Word  \n",
-        "ITP1_9_B: Shuffle  \n",
-        "ITP1_9_C: Card Game  \n",
-        "ITP1_9_D: Transformation  \n",
-        "ITP1_10_A: Distance  \n",
-        "ITP1_10_B: Triangle  \n",
-        "ITP1_10_C: Standard Deviation  \n",
-        "ITP1_10_D: Distance II  \n",
-        "ITP1_11_A: Dice I  \n",
-        "ITP1_11_B: Dice II  \n",
-        "ITP1_11_C: Dice III  \n",
-        "ITP1_11_D: Dice IV  \n",
         "\n"
       ]
     },
@@ -138,7 +94,7 @@
         "  std::cout << \"Hello World\"<< \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +117,7 @@
       "source": [
         "!g++ hello01.cpp -o hello01; ./hello01"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +158,7 @@
         "    std::cout << x*x*x << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +181,7 @@
       "source": [
         "!g++ xcubic01.cpp -o xcubic01; echo 10 | ./xcubic01"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +237,7 @@
         "    std::cout << x * y << \" \" << (x + y) * 2 << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +260,7 @@
       "source": [
         "!g++ rectangle.cpp -o rectangle; echo 5 6 | ./rectangle"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +305,7 @@
         "    std::cout << h << \":\" << m << \":\" << s << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +328,7 @@
       "source": [
         "!g++ watch.cpp -o watch; echo 46979 |./watch"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +377,7 @@
         "    std::cout <<  s << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +400,7 @@
       "source": [
         "!g++ smalllarge.cpp -o smalllarge; echo 2 2 |./smalllarge"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +447,7 @@
         "    std::cout <<  s << \"\\n\";\n",
         "}"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +470,7 @@
       "source": [
         "!g++ range01.cpp -o range01; echo 1 3 8 |./range01"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +530,7 @@
         "    std::cout << v[0] << ' '<< v[1] << ' '<< v[2] << \"\\n\";\n",
         "}"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +553,7 @@
       "source": [
         "!g++ sort3num.cpp -o sort3num; echo 3 1 8 |./sort3num"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,7 +583,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5f091844-fdb1-4991-df12-0cbcbceafd74"
+        "outputId": "b7d64e79-a8e8-46c3-ee90-0ee1dc0dbf82"
       },
       "source": [
         "%%writefile circleinrectangle.cpp\n",
@@ -644,12 +600,12 @@
         "  std::cout <<  s << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 43,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting circleinrectangle.cpp\n"
+            "Writing circleinrectangle.cpp\n"
           ],
           "name": "stdout"
         }
@@ -662,12 +618,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5f69cc34-5147-4385-92f3-0261ab1cae40"
+        "outputId": "822e8f54-d3b8-4639-8c3e-f820c58cf8c1"
       },
       "source": [
         "!g++ circleinrectangle.cpp -o circleinrectangle; echo 5 4 2 2 1 |./circleinrectangle"
       ],
-      "execution_count": 44,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1068,7 +1024,569 @@
         "id": "M5jGhwlZedZz"
       },
       "source": [
-        "# ALDS1 Algorithms and Data Structures I アルゴリズムとデータ構造入門"
+        "# ALDS1 Algorithms and Data Structures I アルゴリズムとデータ構造入門\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dgRpWMNM5f5B"
+      },
+      "source": [
+        "### ALDS1_1_A: Insertion Sort\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wWIeY-3E7WG7",
+        "outputId": "02675017-c16c-47fa-a312-73cd7308f238",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile insertionsort.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int N; cin >> N;\n",
+        "  vector<int> A(N);\n",
+        "  for (int i = 0; i < N; i++) cin >> A.at(i);\n",
+        "\n",
+        "  // 挿入ソート\n",
+        "  // i : 未ソートの部分列の先頭を示すループ変数\n",
+        "  // v : A.at(i) の値を一時的に保存しておくための変数\n",
+        "  // j : ソート済み部分列から v を挿入するための位置を探すループ変数\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    int v = A.at(i);\n",
+        "    int j = i-1;\n",
+        "    while (j >= 0 && A.at(j) > v) {\n",
+        "      A.at(j+1) = A.at(j);\n",
+        "      j--;\n",
+        "    }\n",
+        "    A.at(j+1) = v;\n",
+        "\n",
+        "    // 出力\n",
+        "    for (int k = 0; k < N-1; k++) cout << A.at(k) << \" \";\n",
+        "    cout << A.at(N-1) << endl;\n",
+        "  }\n",
+        "}"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing insertionsort.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8MteZngA7V7u",
+        "outputId": "86e4b166-2eaa-4df0-c75c-276a5a50c6af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ insertionsort.cpp -o insertionsort; echo 5 4 2 2 1 2 |./insertionsort"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4 2 2 1 2\n",
+            "2 4 2 1 2\n",
+            "2 2 4 1 2\n",
+            "1 2 2 4 2\n",
+            "1 2 2 2 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2Z-Bdtte51W-"
+      },
+      "source": [
+        "### ALDS1_1_B: Greatest Common Divisor\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "52uHyHlN52Xk"
+      },
+      "source": [
+        "### ALDS1_1_C: Prime Numbers\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_IwGXudx53ds"
+      },
+      "source": [
+        "### ALDS1_1_D: Maximum Profit\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KA_9W4gE544k"
+      },
+      "source": [
+        "### ALDS1_2_A: Bubble Sort\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rDCjE3hF56D9"
+      },
+      "source": [
+        "### ALDS1_2_B: Selection Sort\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9ot8wAOE57PO"
+      },
+      "source": [
+        "### ALDS1_2_C: Stable Sort\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "av7-B9NV58y6"
+      },
+      "source": [
+        "### ALDS1_3_A: Stack\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_aKlN4EE5-B6"
+      },
+      "source": [
+        "### ALDS1_3_B: Queue\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QVbJHulY5_Cy"
+      },
+      "source": [
+        "### ALDS1_3_C: Doubly Linked List\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BEYYKvyf6AA6"
+      },
+      "source": [
+        "### ALDS1_3_D: Areas on the Cross-Section Diagram\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fpbvBt9r6BAR"
+      },
+      "source": [
+        "### ALDS1_4_A: Linear Search\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OKaHxk6t6CEi"
+      },
+      "source": [
+        "### ALDS1_4_B: Binary Search\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "37EPC_wD6DBh"
+      },
+      "source": [
+        "### ALDS1_4_C: Dictionary\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "alDoe2pT6D5B"
+      },
+      "source": [
+        "### ALDS1_4_D: Allocation\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5_0yoYNR6Exx"
+      },
+      "source": [
+        "### ALDS1_5_A: Exhaustive Search\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YB5qhL2z6FxQ"
+      },
+      "source": [
+        "### ALDS1_5_B: Merge Sort\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mHBEfYte6GqQ"
+      },
+      "source": [
+        "### ALDS1_5_C: Koch Curve\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZVHmAH9k6IIf"
+      },
+      "source": [
+        "### ALDS1_5_D: The Number of Inversions\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E0jJF7W06JAA"
+      },
+      "source": [
+        "### ALDS1_6_A: Counting Sort\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "szEqSVYb6J1H"
+      },
+      "source": [
+        "### ALDS1_6_B: Partition\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c5B-Wl3q6K8P"
+      },
+      "source": [
+        "### ALDS1_6_C: Quick Sort\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E0rbmk966MDf"
+      },
+      "source": [
+        "### ALDS1_6_D: Minimum Cost Sort\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8pl2osYG6M3P"
+      },
+      "source": [
+        "### ALDS1_7_A: Rooted Trees\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x_0_gNKn6NzG"
+      },
+      "source": [
+        "### ALDS1_7_B: Binary Trees\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jYALNOZ16PWG"
+      },
+      "source": [
+        "### ALDS1_7_C: Tree Walk\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DmTIG_xR6QKm"
+      },
+      "source": [
+        "### ALDS1_7_D: Reconstruction of a Tree\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s4SDNt7O6RM2"
+      },
+      "source": [
+        "### ALDS1_8_A: Binary Search Tree I\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pus6KCrN6SBl"
+      },
+      "source": [
+        "### ALDS1_8_B: Binary Search Tree II\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0VvNOJXu6S0F"
+      },
+      "source": [
+        "### ALDS1_8_C: Binary Search Tree III\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ApYo0eho6Tk9"
+      },
+      "source": [
+        "### ALDS1_8_D: Treap\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2cWVvwGQ6Uhp"
+      },
+      "source": [
+        "### ALDS1_9_A: Complete Binary Tree\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D6VvvJVk6V3c"
+      },
+      "source": [
+        "### ALDS1_9_B: Maximum Heap\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SucopzHd6WvU"
+      },
+      "source": [
+        "### ALDS1_9_C: Priority Queue\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vL7hPhDm6X4M"
+      },
+      "source": [
+        "### ALDS1_10_A: Fibonacci Number\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V9y-NAQy6ZKL"
+      },
+      "source": [
+        "### ALDS1_10_B: Matrix Chain Multiplication\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o4JdofIl6aFz"
+      },
+      "source": [
+        "### ALDS1_10_C: Longest Common Subsequence\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-ZcQZvrQ6dPj"
+      },
+      "source": [
+        "### ALDS1_11_A: Graph\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RY4VFxpJ6eoP"
+      },
+      "source": [
+        "### ALDS1_11_B: Depth First Search\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WgkQGomu6iP5"
+      },
+      "source": [
+        "### ALDS1_11_C: Breadth First Search\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2RPOcw-U6jPZ"
+      },
+      "source": [
+        "### ALDS1_11_D: Connected Components\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vOT6-Xk56kJp"
+      },
+      "source": [
+        "### ALDS1_12_A: Minimum Spanning Tree\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1aWc8YGW6ldx"
+      },
+      "source": [
+        "### ALDS1_12_B: Single Source Shortest Path I\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ay3wBAmH6mb4"
+      },
+      "source": [
+        "### ALDS1_12_C: Single Source Shortest Path II\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MWeQ-zPe6nTR"
+      },
+      "source": [
+        "### ALDS1_13_A: 8 Queens Problem\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JKl3FCju6oOH"
+      },
+      "source": [
+        "### ALDS1_13_B: 8 Puzzle\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PYjU2Gis6pRQ"
+      },
+      "source": [
+        "### ALDS1_13_C: 15 Puzzle\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YVQXVue_6qNI"
+      },
+      "source": [
+        "### ALDS1_14_A: Naive String Search\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WYeiAaKf6rKH"
+      },
+      "source": [
+        "### ALDS1_14_B: String Search\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UI6kfrYa6sDX"
+      },
+      "source": [
+        "### ALDS1_14_C: Pattern Search\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QJulQmps6tMn"
+      },
+      "source": [
+        "### ALDS1_14_D: Multiple String Matching\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rF_XAz_96uLP"
+      },
+      "source": [
+        "### ALDS1_15_A: Change Making\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5mKMHoDt6vEB"
+      },
+      "source": [
+        "### ALDS1_15_C: Activity Selection Problem\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1GWivCmx6v-W"
+      },
+      "source": [
+        "### ALDS1_15_D: Huffman Coding\n"
       ]
     }
   ]
