Colaboratory を使用して作成しました

--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPCtSi4hl/z7vDWR/lvfIA/",
+      "authorship_tag": "ABX9TyNCGgmc8ie2n1hfOvULQnPM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -600,7 +600,7 @@
         "  std::cout <<  s << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,7 +623,7 @@
       "source": [
         "!g++ circleinrectangle.cpp -o circleinrectangle; echo 5 4 2 2 1 |./circleinrectangle"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,8 +725,9 @@
       },
       "source": [
         "### ITP1_4_C: Simple Calculator\n",
-        "２つの整数 a, b と１つの演算子 op を読み込んで、a op b を計算するプログラムを作成して下さい。ただし、演算子 op は、\"+\"(和)、\"-\"(差)、\"*\"(積)、\"/\"(商)、のみとし、割り算で割り切れない場合は、小数点以下を切り捨てたものを計算結果とします\n",
-        "。 op が '?' のとき 入力の終わりを示します。このケースの出力は行ってはいけません。\n",
+        "２つの整数 $a$, $b$ と１つの演算子 op を読み込んで、$a$ op $b$ を計算する。\n",
+        "演算子 op は、\"+\"(和)、\"-\"(差)、\"*\"(積)、\"/\"(商)、のみとし、割り算で割り切れない場合は、小数点以下を切り捨てたものを計算結果とする。\n",
+        "op が '?' のとき 入力の終わり。\n",
         "\n",
         "例: 1 + 2 56 - 18 13 * 2 100 / 10 27 + 81 0 ? 0  =>\n",
         "3  \n",
@@ -742,8 +743,72 @@
         "id": "xSXjkxUWSTov"
       },
       "source": [
+        "### ITP1_4_D: Min, Max and Sum\n",
+        "\"n\" 個の整数 $a_i\"(\"i\"=1,2,...\"n\")について、最大値、最小値、合計値を求める。\n",
         "\n",
-        "### ITP1_4_D: Min, Max and Sum\n"
+        "例: 5 10 1 5 4 17 => 1 17 37\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KnCqqTPoElUQ",
+        "outputId": "c4577893-274d-476e-c08b-2e5ff0551280",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile minmaxsum.cpp\n",
+        "#include <stdio.h>\n",
+        "#include <algorithm>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main(){\n",
+        "\tint n,max_num = -1000001,min_num = 1000001,tmp;\n",
+        "\tlong long int sum = 0;\n",
+        "\tscanf(\"%d\",&n);\n",
+        "\tfor(int i = 0; i < n; i++){\n",
+        "\t\tscanf(\"%d\",&tmp);\n",
+        "\t\tsum += tmp;\n",
+        "\t\tmax_num = max(max_num,tmp);\n",
+        "\t\tmin_num = min(min_num,tmp);\n",
+        "\t}\n",
+        "\tprintf(\"%d %d %lld\\n\",min_num,max_num,sum);\n",
+        "}"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting minmaxsum.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xs2uvrODElJy",
+        "outputId": "d258fdd2-a18a-4af5-a296-ee037f68a057",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ minmaxsum.cpp -o minmaxsum; echo 3 1 8 7|./minmaxsum"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 8 16\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1040,10 +1105,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wWIeY-3E7WG7",
-        "outputId": "02675017-c16c-47fa-a312-73cd7308f238",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "02675017-c16c-47fa-a312-73cd7308f238"
       },
       "source": [
         "%%writefile insertionsort.cpp\n",
@@ -1074,7 +1139,7 @@
         "  }\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,15 +1154,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "8MteZngA7V7u",
-        "outputId": "86e4b166-2eaa-4df0-c75c-276a5a50c6af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86e4b166-2eaa-4df0-c75c-276a5a50c6af"
       },
       "source": [
         "!g++ insertionsort.cpp -o insertionsort; echo 5 4 2 2 1 2 |./insertionsort"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
