Colaboratory を使用して作成しました

--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPc8WZap/N9DgZ6cy+6r8Ew",
+      "authorship_tag": "ABX9TyM8Caf0/xk9S9ccVinyi6j2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,7 +236,7 @@
         "    std::cout << x * y << \" \" << (x + y) * 2 << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
       "source": [
         "!g++ rectangle.cpp -o rectangle; echo 5 6 | ./rectangle"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
         "    std::cout << h << \":\" << m << \":\" << s << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +328,7 @@
       "source": [
         "!g++ watch.cpp -o watch; echo 46979 |./watch"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +377,7 @@
         "    std::cout <<  s << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +400,7 @@
       "source": [
         "!g++ smalllarge.cpp -o smalllarge; echo 2 2 |./smalllarge"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,15 +409,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "p8G6sYtePUz2"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -439,13 +430,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c8971ef8-9d4f-41f5-822d-525aa91fa6c0"
+        "outputId": "50965b07-5a96-4cbd-8afe-86bfe2580343"
       },
       "source": [
         "%%writefile range01.cpp\n",
         "\n",
         "#include <iostream>\n",
-        "#include <string>\n",
         "\n",
         "int main (){\n",
         "    int a, b, c;\n",
@@ -456,7 +446,7 @@
         "    std::cout <<  s << \"\\n\";\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,12 +464,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe8cfd6d-1119-47ce-9e39-24a0e749e045"
+        "outputId": "e46b7623-57ef-4bb1-9a80-b458d75d18d2"
       },
       "source": [
         "!g++ range01.cpp -o range01; echo 1 3 8 |./range01"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,15 +478,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Rwl8VIYN8c9Y"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -518,15 +499,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "68bcc3b4-d914-47f7-da2f-1c254f473544"
+        "outputId": "57a630db-a3be-4fb7-c014-d2df0b7e4d91"
       },
       "source": [
         "%%writefile sort3num.cpp\n",
         "#include <iostream>\n",
-        "#include <string>\n",
         "#include <vector>\n",
         "#include <algorithm>\n",
-        "// #include <bits/stdc++.h>\n",
+        "\n",
         "int main (){\n",
         "    int x;\n",
         "    std::vector<int> v;\n",
@@ -539,12 +519,12 @@
         "    std::cout << v[0] << ' '<< v[1] << ' '<< v[2] << \"\\n\";\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting sort3num.cpp\n"
+            "Writing sort3num.cpp\n"
           ],
           "name": "stdout"
         }
@@ -557,12 +537,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4bee0e7b-cd3f-4873-fc24-16bdde329422"
+        "outputId": "6a3189c8-b7a0-438e-e8fd-aad5bab48f51"
       },
       "source": [
         "!g++ sort3num.cpp -o sort3num; echo 3 1 8 |./sort3num"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,7 +572,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b7d64e79-a8e8-46c3-ee90-0ee1dc0dbf82"
+        "outputId": "bc49cf8f-fc5b-4b06-e2cf-6d9293ab622c"
       },
       "source": [
         "%%writefile circleinrectangle.cpp\n",
@@ -609,7 +589,7 @@
         "  std::cout <<  s << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,12 +607,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "822e8f54-d3b8-4639-8c3e-f820c58cf8c1"
+        "outputId": "e7b16f8f-75e6-47e3-9b20-cb3509e8aa7c"
       },
       "source": [
         "!g++ circleinrectangle.cpp -o circleinrectangle; echo 5 4 2 2 1 |./circleinrectangle"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,6 +631,68 @@
       "source": [
         "### ITP1_3_A: Print Many Hello World\n",
         "1000 個の \"Hello World\" を出力する。 おっと、Colab の環境で1000個出されても困るので10個にしよう。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PYe65DyOxGQm",
+        "outputId": "4293c1f3-80f8-41c0-9195-300540e4f1c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile manyhelloworld.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main(){\n",
+        "    for (int i=0; i < 10; i++){\n",
+        "        std::cout << \"Hello World\" << \"\\n\";\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting manyhelloworld.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lVK12ZoTxGF3",
+        "outputId": "05988336-ad3d-4f26-adea-0130a74f78a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ manyhelloworld.cpp -o manyhelloworld; echo 5 4 2 2 1 |./manyhelloworld"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -674,6 +716,67 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "upF_09F_xtWw",
+        "outputId": "07b6b88d-09f8-4a09-a75b-f55266c944ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile printestcase.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main(){\n",
+        "    int x;\n",
+        "    for (int i=1; ; i++){\n",
+        "        std::cin >> x;\n",
+        "        if (x == 0) break;\n",
+        "        std::cout << \"Case \" << i << \": \" << x << \"\\n\";\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting printestcase.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kNvVXmuXxtMQ",
+        "outputId": "a463e933-700a-4a20-9f8e-8f15b6ee1fd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ printestcase.cpp -o printestcase; echo 3 5 11 7 8 19 0 |./printestcase"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Case 1: 3\n",
+            "Case 2: 5\n",
+            "Case 3: 11\n",
+            "Case 4: 7\n",
+            "Case 5: 8\n",
+            "Case 6: 19\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "h0P_lhLix4BL"
@@ -682,10 +785,73 @@
         "### ITP1_3_C: Swapping Two Numbers\n",
         "1行につき、2つの整数 $x,y$ を読み込み、それらを値が小さい順に出力する。 $x$ と $y$ がともに 0 のとき入力の終わりで、出力はない。\n",
         "\n",
-        "例: 3 2 2 2 5 3 0 0 => \n",
+        "例: 3 2 2 2 5 3 0 0 =>  \n",
         "2 3  \n",
         "2 2  \n",
         "3 5  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oAv6fswOzX-Z",
+        "outputId": "e64d7ed6-e6e2-4015-a981-e15dfb20c916",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile swap2num.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main(){\n",
+        "    int a, b;\n",
+        "    while (true) {\n",
+        "        std::cin >> a >> b;\n",
+        "        if (a == 0 && b == 0) break;\n",
+        "        if (a < b) {\n",
+        "            std::cout << a << \" \" << b << \"\\n\";\n",
+        "        } else {\n",
+        "            std::cout << b << \" \" << a << \"\\n\";\n",
+        "        }\n",
+        "    }\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting swap2num.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BNWeFJBJzkCO",
+        "outputId": "4f186d68-084e-493b-d0e9-6d1c9d28dd70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ swap2num.cpp -o swap2num; echo 3 2 2 2 5 3 0 0 |./swap2num"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 3\n",
+            "2 2\n",
+            "3 5\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -701,6 +867,75 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uOwoHSVT11ec",
+        "outputId": "ad4ddf3a-3369-4d57-830e-0bd2d5d4d5a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile howmanydivisor.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main(){\n",
+        "    int a, b, c, f = 0;\n",
+        "    std::cin >> a >> b >> c;\n",
+        "    for (int x = a; x <= b; x++){\n",
+        "        if (c % x == 0) f++;\n",
+        "    }\n",
+        "    std::cout << f << \"\\n\";\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting howmanydivisor.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Os1_6Y0111T1",
+        "outputId": "4e724caa-8426-432a-aa06-a23684895841",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ howmanydivisor.cpp -o howmanydivisor; echo 5 14 80 |./howmanydivisor"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mBAzAIfZ2pQ7"
+      },
+      "source": [
+        "# いまここ\n",
+        "次の問題の double が期待と違うがどうか。\n",
+        "1. aizu に上げてみる\n",
+        "1. 本のcastのところを考える"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "iG1eyRf9SNQx"
@@ -713,6 +948,60 @@
         "- a ÷ b : $f$ (浮動小数点数)\n",
         "\n",
         "例: 3 2 => 1 1 1.50000\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AE8L0ved21yi",
+        "outputId": "f28974eb-c9a7-481b-c8b1-2e1a77981315",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile adivbproblem.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main(){\n",
+        "    int a, b;\n",
+        "    std::cin >> a >> b;\n",
+        "    std::cout << a/b << \" \" << a%b << \" \" << (double)a/b << \"\\n\";\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting adivbproblem.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aiWNoNWQ21mS",
+        "outputId": "02357fa2-bc37-49bf-e44b-24930be5ed5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ adivbproblem.cpp -o adivbproblem; echo 3 2 |./adivbproblem"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 1 1.5\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
